adding exception